fixed overflow for listview and added shadows to cards

--- a/client/src/components/dashboard.css
+++ b/client/src/components/dashboard.css
@@ -49,6 +49,10 @@
   color: white;
   padding: 5px;
   padding-top: 20px;
+  -webkit-box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.75);
+  
 }
 .nav{
   height: 100%;
